# Sudoku_igra

./: CMakeLists.txt  Number_generator.cpp  Number_generator.h  Resource.h  Sudoku_igra.cpp  Sudoku_igra.h  Sudoku_igra.rc  Sudoku_igra.sln  Sudoku_igra.vcxproj  Sudoku_igra.vcxproj.filters  main.cpp  main.h
.github/workflows/: cmake-multi-platform.yml
